# stack-feed

./: .gitignore  discord_bot.py  pyproject.toml  summarizer.py
.github/workflows/: weekly-bot.yml
fetcher/: config.json  feed_fetcher.py  gmail_fetcher.py  news_fetcher.py
