[project]
name = "stack-feed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.0.0",
]
